[project]
name = "hide-japanese"
version = "0.1.0"
description = "日本語テキストの固有表現をマスキングするためのRESTful API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.2",
    "cupy-cuda117>=10.6.0",
    "ja_ginza_bert_large @ https://github.com/megagonlabs/ginza/releases/download/v5.2.0/ja_ginza_bert_large-5.2.0b1-py3-none-any.whl",
    "spacy[cuda117]>=3.7.4",
    "pytest",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hide_japanese"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

unfixable = []

ignore = []

[tool.ruff.lint.per-file-ignores]
# Ignore E501 in client.py
"client.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
